--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "description": "This is the server for the Pokemon Catcher game",
     "main": "index.js",
     "scripts": {
-        "run": "node index.js",
+        "start": "node index.js",
+        "deploy": "cd .. && git subtree push --prefix server heroku main",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
